# geometrica

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
arch/: arch.typ  cli.typ  code_examples.txt  core.typ  gui.typ  lang.typ  notes.typ  types.typ
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  printing.rs  script.geom  script_file_mode.rs  stdin_mode.rs  tty_mode.rs
crates/client/: Cargo.toml
crates/client/src/: clear.rs  client.rs  command.rs  connection.rs  define.rs  delete.rs  eval.rs  exec.rs  func.rs  items.rs  lib.rs  models.rs  new.rs  request.rs  rm.rs  script_result.rs  set.rs  table.rs  test_utils.rs
crates/client/tests/: clear.rs  define.rs  eval.rs  items.rs  list_func.rs  new.rs  rm.rs  set.rs  test_client.rs
crates/executor/: Cargo.toml
crates/executor/src/: cexpr.rs  compile.rs  error.rs  eval.rs  exec.rs  executor.rs  function.rs  lib.rs  node.rs  svg.rs  transform.rs
crates/executor/src/cexpr/: compile.rs  eval.rs  mod.rs
crates/executor/src/function/: builtin.rs  builtins.rs  mod.rs
crates/executor/src/function/builtins/: cmp.rs  ctors.rs  logic.rs  math.rs  mod.rs  struct_ops.rs  type_casts.rs
crates/executor/src/store/: from_stored.rs  mod.rs  models.rs  to_stored.rs
crates/gui/: Cargo.toml  clippy.toml
crates/gui/src/: args_w.rs  canvas_w.rs  command_w.rs  helpers.rs  main.rs  mode.rs  mode_selector_w.rs  my_colors.rs  status_bar_w.rs  top_bar_w.rs  variable_w.rs
crates/gui/src/canvas_w/: draw.rs  helpers.rs  mod.rs  program.rs  transform.rs  widget.rs
crates/gui/src/main_w/: connected_w.rs  disconnected_w.rs  mod.rs  widget.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  parse_into.rs
crates/parser/src/parser/: mod.rs
crates/parser/src/parser/test/: expr.rs  ident.rs  mod.rs  statements.rs  value.rs  whitespace.rs
crates/parser/src/test/: expr.rs  mod.rs  statements.rs  value.rs
crates/server/: Cargo.toml
crates/server/src/: clear.rs  delete.rs  eval.rs  exec.rs  func.rs  items.rs  main.rs  ping.rs  result.rs  rm.rs  routes.rs  set.rs
crates/server/tests/: README.md  connection.rs  eval.rs  exec.rs
crates/types/: Cargo.toml
crates/types/src/: api.rs  core.rs  display.rs  lang.rs  lib.rs  math.rs
crates/types/src/lang/: builders.rs
doc/: LINK.txt  code_examples.txt  flake.nix  Антиплагиат_Комментарий.txt  Описание_программного_проекта.docx
doc/ToP/: body.typ  cfg.typ  run  template.typ
doc/ToR/: body.typ  cfg.typ  run
doc/checks/: body.typ  cfg.typ  run  template.typ
doc/language/: body.typ  cfg.typ  code_example.geom  run  template.typ
doc/manual/: body.typ  cfg.typ  run  template.typ
doc/note/: body.typ  cfg.typ  crate_relations.dot  execution.dot  execution_process.dot  run  schema.dot  template.typ
doc/pres/: body.typ  execution_process.dot  geometrica-cat.geom  main.typ  old.typ  run  util.typ
examples/circles/: .gitignore  Cargo.toml  README.md
examples/circles/src/: main.rs
examples/geom/: README.md  altitudes_theorem.geom  cat.geom
