[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.132"
smart-default = "0.7.1"
tokio = { version = "1.41.0", features = ["full"] }
types = { path = "../types" }
test_bin = "0.4.0"
tempfile = "3.13.0"

[dev-dependencies]
server = { path = "../server" }
