[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.20.2"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
thiserror = "1.0.65"
types = { path = "../types", features = ["display", "math", "serde"] }

[dev-dependencies]
parser = { path = "../parser" }
