[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
executor = { path = "../executor" }
types = { path = "../types" }
parser = { path = "../parser" }
axum = { version = "0.7.7", features = ["macros"] }
